<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.shreyas.mocklogin.MainActivity">

    <Button
        android:id="@+id/submitButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dobTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dob"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dobTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/genderTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lnameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/simple_form"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/fnameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="223dp"
        android:layout_height="42dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/dobTextView" />

    <EditText
        android:id="@+id/genderEditText"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/male_female_other"
        android:inputType="textCapWords|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dobEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/genderTextView" />

    <EditText
        android:id="@+id/lnameEditText"
        android:layout_width="204dp"
        android:layout_height="19dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/genderEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toEndOf="@+id/lnameTextView" />

    <EditText
        android:id="@+id/fnameEditText"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lnameEditText"
        app:layout_constraintEnd_toEndOf="parent" />



</android.support.constraint.ConstraintLayout>
